--- a/Projeto-AprendizadoDeMáquina.ipynb
+++ b/Projeto-AprendizadoDeMáquina.ipynb
@@ -461,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Obteve-se uma previsão de "
+    "#### Obteve-se uma precisão de 72%"
    ]
   }
  ],
